# ai-robot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: config.example.json
config/workspace/skills/calendar-booking/: SKILL.md
config/workspace/skills/conversation-review/: SKILL.md
config/workspace/skills/direct-message/: SKILL.md
config/workspace/skills/image-analysis/: SKILL.md
config/workspace/skills/message-digest/: SKILL.md
scripts/: bootstrap.sh  readiness.sh
src/reminder_mcp/: __init__.py  audit_remote.py  audit_store.py  audit_web.py  calendar_booking.py  cli.py  contacts.py  conversation_history.py  delivery.py  nanobot_tools.py  patch_nanobot.py  server.py  storage.py
src/reminder_mcp/audit_static/: app.css  app.js  index.html
tests/: test_audit_remote.py  test_audit_store.py  test_audit_web.py  test_bounded_cron.py  test_calendar_booking.py  test_contacts.py  test_conversation_history.py  test_conversation_review_skill.py  test_cron_timezone.py  test_delivery.py  test_feishu_processing_card.py  test_image_safety.py  test_nanobot_tools.py  test_server.py  test_storage.py
