[project]
name = "feishu-reminder-mcp"
version = "0.1.0"
description = "Structured message collection and digest delivery tools for nanobot"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.12,<4",
  "httpx>=0.28,<1",
  "mcp>=1.26,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
]

[project.scripts]
reminder-mcp = "reminder_mcp.server:main"
reminder-admin = "reminder_mcp.cli:main"
reminder-audit = "reminder_mcp.audit_web:main"

[project.entry-points."nanobot.tools"]
add_room_to_feishu_meeting = "reminder_mcp.nanobot_tools:AddRoomToFeishuMeetingTool"
book_feishu_meeting = "reminder_mcp.nanobot_tools:BookFeishuMeetingTool"
send_feishu_user_message = "reminder_mcp.nanobot_tools:SendFeishuUserMessageTool"
record_message = "reminder_mcp.nanobot_tools:RecordMessageTool"
update_record = "reminder_mcp.nanobot_tools:UpdateRecordTool"
list_digest_drafts = "reminder_mcp.nanobot_tools:ListDigestDraftsTool"
create_digest_draft = "reminder_mcp.nanobot_tools:CreateDigestDraftTool"
confirm_digest = "reminder_mcp.nanobot_tools:ConfirmDigestTool"
cancel_digest = "reminder_mcp.nanobot_tools:CancelDigestTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reminder_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
